--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -7,6 +7,7 @@
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
     <Compile Include="Day3.fs" />
+    <Compile Include="Day4.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Hedgehog" Version="0.8.4" />
