--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -9,6 +9,8 @@
     <Compile Include="Day3.fs" />
     <Compile Include="Day4.fs" />
     <Compile Include="Day5.fs" />
+    <Compile Include="Day6.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Hedgehog" Version="0.8.4" />
