--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -3,6 +3,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWarn>62</NoWarn>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="Day1.fs" />
     <Compile Include="Day2.fs" />
@@ -10,6 +13,7 @@
     <Compile Include="Day4.fs" />
     <Compile Include="Day5.fs" />
     <Compile Include="Day6.fs" />
+    <Compile Include="Day7.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
