--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <NoWarn>62</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Day1.fs" />
