--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -15,6 +15,7 @@
     <Compile Include="Day8.fs" />
     <Compile Include="Day9.fs" />
     <Compile Include="Day10.fs" />
+    <Compile Include="Day11.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
