--- a/AdventOfCode2020.fsproj
+++ b/AdventOfCode2020.fsproj
@@ -5,31 +5,32 @@
     <NoWarn>62</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Day1.fs" />
-    <Compile Include="Day2.fs" />
-    <Compile Include="Day3.fs" />
-    <Compile Include="Day4.fs" />
-    <Compile Include="Day5.fs" />
-    <Compile Include="Day6.fs" />
-    <Compile Include="Day7.fs" />
-    <Compile Include="Day8.fs" />
-    <Compile Include="Day9.fs" />
-    <Compile Include="Day10.fs" />
-    <Compile Include="Day11.fs" />
-    <Compile Include="Day12.fs" />
-    <Compile Include="Day13.fs" />
-    <Compile Include="Day14.fs" />
-    <Compile Include="Day15.fs" />
-    <Compile Include="Day16.fs" />
-    <Compile Include="Day17.fs" />
-    <Compile Include="Day18.fs" />
-    <Compile Include="Day19.fs" />
-    <Compile Include="Program.fs" />
+    <Compile Include="Day1.fs"/>
+    <Compile Include="Day2.fs"/>
+    <Compile Include="Day3.fs"/>
+    <Compile Include="Day4.fs"/>
+    <Compile Include="Day5.fs"/>
+    <Compile Include="Day6.fs"/>
+    <Compile Include="Day7.fs"/>
+    <Compile Include="Day8.fs"/>
+    <Compile Include="Day9.fs"/>
+    <Compile Include="Day10.fs"/>
+    <Compile Include="Day11.fs"/>
+    <Compile Include="Day12.fs"/>
+    <Compile Include="Day13.fs"/>
+    <Compile Include="Day14.fs"/>
+    <Compile Include="Day15.fs"/>
+    <Compile Include="Day16.fs"/>
+    <Compile Include="Day17.fs"/>
+    <Compile Include="Day18.fs"/>
+    <Compile Include="Day19.fs"/>
+    <Compile Include="Program.fs"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Hedgehog" Version="0.8.4" />
-    <PackageReference Include="FSharpPlus" Version="1.1.5" />
-    <PackageReference Include="FsToolkit.ErrorHandling" Version="2.0.0" />
-    <PackageReference Include="FParsec" Version="1.1.1" />
+    <PackageReference Include="Hedgehog" Version="0.8.4"/>
+    <PackageReference Include="FSharpPlus" Version="1.1.5"/>
+    <PackageReference Include="FsToolkit.ErrorHandling" Version="2.0.0"/>
+    <PackageReference Include="FParsec" Version="1.1.1"/>
+    <PackageReference Include="FSharpx.Collections" Version="2.1.3"/>
   </ItemGroup>
 </Project>
